Merged revisions 68523 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r68523 | martin.v.loewis | 2009-01-11 10:26:54 +0100 (So, 11 Jan 2009) | 2 lines

  Issue #4279: Fix build of parsermodule under Cygwin.
........